--- a/assets/css/partials/_footer.scss
+++ b/assets/css/partials/_footer.scss
@@ -9,8 +9,8 @@
 .social-link{
     display: flex; justify-content: center;
   
-    li{ list-style: none;
-        padding: 0.5em;
+    li{ list-style: none; margin-left: 0;
+        padding: 1em;
        .svg-ico{
            svg{
                width: 30px; height: 30px;
