--- a/assets/css/plugin/_rouge.scss
+++ b/assets/css/plugin/_rouge.scss
@@ -30,6 +30,7 @@ html { -webkit-font-smoothing: antialiased; } /* only if background darker than 
   padding: 0.2em; border-radius: 2px; 
   font-family: Monaco, Menlo, Consolas, "Courier- New", monospace;
 }
+pre.highlight{ overflow: auto;}
 
 .highlighter-rouge > code { color: $secondary; }
 
